--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,9 @@ spring:
     name: urotaxi
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://urotaxidb.chabq4njmyj2.ap-south-1.rds.amazonaws.com:3306/urotaxidb
-    username: root
-    password: Welcome#1
+    url: jdbc:mysql://#dbhost#/urotaxidb
+    username: #DB_USER_NAME#
+    password: #DB_USER_PSW#
   jpa:
     show-sql: true
     database-platform: org.hibernate.dialect.MySQL8Dialect
